syntax = "proto2";

//
// Copyright 2020 Signal Messenger, LLC.
// SPDX-License-Identifier: AGPL-3.0-only
//

package signal.proto;

option go_package = "github.com/gwillem/signal-go/internal/proto";

// Server certificate used to sign sender certificates.
message ServerCertificate {
    message Certificate {
        optional uint32 id  = 1;
        optional bytes  key = 2;
    }
    optional bytes certificate = 1;
    optional bytes signature   = 2;
}

// Sender certificate for sealed sender messages.
// Contains sender's identity, signed by server certificate.
message SenderCertificate {
    message Certificate {
        optional string            senderE164    = 1;
        oneof senderUuid {
            string                 uuidString    = 6;
            bytes                  uuidBytes     = 7;
        }
        optional uint32            senderDevice  = 2;
        optional fixed64           expires       = 3;
        optional bytes             identityKey   = 4;
        oneof signer {
            bytes /*ServerCertificate*/ signerCertificate = 5;
            uint32                      signerId          = 8;
        }
    }
    optional bytes certificate = 1;
    optional bytes signature   = 2;
}

// Outer structure of a Sealed Sender v1 message.
// This is parsed BEFORE decryption to extract the encrypted components.
message UnidentifiedSenderMessage {
    optional bytes ephemeral_public = 1;   // 33-byte Curve25519 public key (0x05 prefix)
    optional bytes encrypted_static = 2;   // Encrypted static key (48 bytes: 32 key + 16 MAC)
    optional bytes encrypted_message = 3;  // Encrypted message content
}
